--- a/index.html
+++ b/index.html
@@ -348,43 +348,47 @@
             </div>
         </section>
 
-        <section class="s-servise">
-            <div class="container df">
-                <div class="s-ser-wrap1">
-                    <div class="s-ser-wrapper1">
-                        <h2 class="s-ser-w-hd">Car rental keeps you safe</h2>
-                        <p class="s-ser-w-ph">The safety of our employees and renters is our number one priority. In
-                            addition to being confident your vehicle is cleaned and sanitized every time you rent, you
-                            can also feel confident that we will take every opportunity to enhance the health and safety
-                            measures currently practiced in our operations.</p>
+        <div class="container">
+            <section class="s-servise">
+                <div class="container df">
+                    <div class="s-ser-wrap1">
+                        <div class="s-ser-wrapper1">
+                            <h2 class="s-ser-w-hd">Car rental keeps you safe</h2>
+                            <p class="s-ser-w-ph">The safety of our employees and renters is our number one priority. In
+                                addition to being confident your vehicle is cleaned and sanitized every time you rent,
+                                you
+                                can also feel confident that we will take every opportunity to enhance the health and
+                                safety
+                                measures currently practiced in our operations.</p>
+                        </div>
+                        <div class="s-ser-wrapper2">
+                            <div class="s-ser-wrap">
+                                <img src="img/Flask-alt.svg" class="s-ser-wrap-img">
+                                <p class="s-ser-wrap-ph">Every car is thoroughly sanitized and cleaned</p>
+                            </div>
+                            <div class="s-ser-wrap">
+                                <img src="img/Heartbeat.svg" class="s-ser-wrap-img">
+                                <p class="s-ser-wrap-ph">All of our employees wear masks</p>
+                            </div>
+                            <div class="s-ser-wrap">
+                                <img src="img/Folder-lock.svg" class="s-ser-wrap-img">
+                                <p class="s-ser-wrap-ph">We stay up to date with all protocol from the CDC</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="s-ser-wrapper2">
-                        <div class="s-ser-wrap">
-                            <img src="img/Flask-alt.svg" class="s-ser-wrap-img">
-                            <p class="s-ser-wrap-ph">Every car is thoroughly sanitized and cleaned</p>
-                        </div>
-                        <div class="s-ser-wrap">
-                            <img src="img/Heartbeat.svg" class="s-ser-wrap-img">
-                            <p class="s-ser-wrap-ph">All of our employees wear masks</p>
-                        </div>
-                        <div class="s-ser-wrap">
-                            <img src="img/Folder-lock.svg" class="s-ser-wrap-img">
-                            <p class="s-ser-wrap-ph">We stay up to date with all protocol from the CDC</p>
-                        </div>
+                    <div class="s-ser-wrap2">
+                        <img src="img/s-ser.png">
+                        <div></div>
                     </div>
                 </div>
-                <div class="s-ser-wrap2">
-                    <img src="img/s-ser.png">
-                    <div></div>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
         <div class="container">
             <section class="s-foot">
-                <div class="s-foot_top df">
+                <div class="s-foot_top" style="position: relative;">
                     <div class="s-foot_top-box1">
                         <a href="index.html" class="s-foot-link">
                             <img src="img/Logo.svg" class="s-foot-logo">
@@ -392,9 +396,9 @@
                         <p class="s-foot-ph">Car rental offers a wide range of cars available for rent in Newark EWR
                             Airport NJ. We pride ourselves in our customer service, and hassle-free renting experience.
                         </p>
-                        <div class="s-foot-btm-wrap" style="display: none;">
-                            <p class="s-foot-copy">© 2022 Car rental Terms & Conditions</p>
-                        </div>
+                    </div>
+                    <div class="tablet" style="position: absolute; top: 66px; right: 0; display: none;">
+                        <p class="s-foot-copy" style="width: 160px; text-align: left; right: 0;">© 2022 Car rental Terms & Conditions</p>
                     </div>
                     <div class="s-foot_top-box2">
                         <div class="s-foot-wrap">
